--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,6 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* hides horizontal scrolling on the entire document */
 body{
   overflow-x: hidden;
   display: flex;
@@ -97,8 +96,6 @@ body{
   flex-direction: column-reverse;
   height: 100vh;
 }
-
-/* to include the fonts in the file...sure the url source has the correct path...so I added the ../fonts/ for the CSS to go up and go into the fonts folder.*/
 
 @font-face {
   font-family: 'osgardregular';
@@ -117,7 +114,7 @@ body{
   font-style: normal;
 }
 
-/* Basic setup for the nav bar */
+/* Navbar */
 nav{
   width: 100vw;
   height: 100px;
@@ -178,6 +175,88 @@ nav ul li a{
   font-size: 20px;
   color: #fff;
   font-family: 'eccentricregular';
+}
+
+/* Diamonds in the hero section */
+
+.diamonds {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin: 0px;
+  position: relative;
+  top: 100px;
+  left: 35%;
+}
+
+.diamonds ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin: 0px;
+  list-style-type: none;
+}
+
+.diamonds ul li{
+  margin: 0px 10px 0px 10px;
+}
+.rotateme{
+  width: 10px;
+  height: 10px;
+  background-color: #EE7642;
+  transform: rotate(45deg);
+}
+#specialrotateme{
+  width: 12px;
+  height: 12px;
+  background-color: #FBB44E;
+}
+
+/* About Page Content */
+
+.about_content{
+  width: 100vw;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url('../img/');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 575px;
+}
+
+
+/* Shop Page Content */
+
+.shop_content{
+  width: 100vw;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #EE7642;
+}
+
+
+/* Tour Page Content */
+
+.tour_content{
+  width: 100vw;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url('../img/');
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 
