--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,7 @@ nav{
   flex-direction: row;
   margin: 0px;
   background-color: #EE7642;
+  /* position: sticky; */
 }
 
 /* added in margin: 0px; so that on the index.html the whole screen is fixed to full height */
@@ -180,8 +181,8 @@ nav ul li a{
 nav ul li a:hover {
   background-color: #FBB44E;
   color: #000;
-  padding: 50px 75px 28px 75px;
-  margin: -50px -75px -28px -75px;
+  padding: 50px 75px 34px 75px;
+  margin: -50px -75px -34px -75px;
 }
 
 nav ul li a span{
@@ -196,8 +197,8 @@ nav ul li a span{
 a#gavinlink:hover {
   background-color: #FBB44E;
   color: #000;
-  padding: 50px 75px 20px 75px;
-  margin: -50px -75px -20px -75px;
+  padding: 60px 65px 27px 65px;
+  margin: -60px -65px -27px -65px;
 }
 
 
@@ -302,12 +303,38 @@ a#gavinlink:hover {
 .about_hero{
   background-image: url('../img/groupphoto.jpg');
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   width: 100vw;
-  height: 700px;
-  margin: 5% 0% 5% 0%;
+  height: 575px;
+  margin: 0 auto;
 }
+
+.aboutpage h4{
+  font-family: 'osgardregular';
+  font-weight: normal;
+  font-size: 72px;
+  line-height: 72px;
+  color: #FBB44E;
+  margin: 20px 0px 0px 0px;
+  position: relative;
+  right: 23%;
+}
+
+.aboutpage p{
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-size: 25px;
+  line-height: 32px;
+  color: #ffffff;
+  margin: -5px 0px 46px 0px;
+  position: relative;
+  width: 928px;
+  left: 1%;
+}
+
+
+
 
 
 /* ==========================================================================
