TIM EDITS/Show & Hide Content on a timer
What I did:
- Setup some basic Jquery solution to show/hide different divs on a timer. We'll discuss how this works in class

What I will do next:
- Faux add to cart interaction

What you'll do next: 
- Continue on the content build out for shop
- Continue with mobile styling
- Favicon creation

--- a/css/main.css
+++ b/css/main.css
@@ -302,6 +302,15 @@ a#gavinlink:hover {
   background-color: #ffffff;
 }
 
+/* Timed Content */
+
+#b,
+#c,
+#d,
+#e{
+  display: none;
+}
+
 /* Sets up the about page section....you'll want to copy/paste and rename/style a bit for the tour page as well */
 .aboutpage{
   background-image: url('../img/albumart_desktop.jpg');
