--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ nav ul li a span{
   width: max-content;
 }
 
-nav ul li a:hover {
+nav ul li:not(#navcart) a:hover {
   background-color: #FBB44E;
   color: #000;
   padding: 40px 75px 40px 75px;
@@ -195,8 +195,8 @@ nav ul li a:hover {
 a#gavinlink:hover {
   background-color: #FBB44E;
   color: #000;
-  padding: 51px 65px 35px 65px;
-  margin: -51px -65px -35px -65px;
+  padding: 75px 65px 35px 65px;
+  margin: -75px -65px -35px -65px;
 }
 
 #gavinmobile{
@@ -487,6 +487,197 @@ nav.index_nav ul li a:hover {
   height: 394px;
 }
 
+.shop_item .itemname{
+  position: relative;
+  background-color: none;
+  color: #36333e;
+  font-size: 30px;
+  width: 394px;
+  right: 50%;
+  margin-bottom: 20px;
+}
+
+.shop_item .container {
+  position: relative;
+  width: 100%;
+  background-color: #FBB44E;
+}
+
+.shop_item .image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .2s ease;
+  backface-visibility: hidden;
+}
+
+.shop_item .middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  width: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+}
+
+.shop_item .container:hover .image {
+  opacity: 0.1;
+}
+
+.shop_item .container:hover .middle {
+  opacity: 1;
+}
+
+.shop_item .addtocart_button button{
+  background-color: #fbb44e;
+  color: #36333e;
+  font-size: 20px;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 20px;
+  width: 200px;
+}
+
+.shop_item .addtocart_button button:hover{
+  background-color: #36333e;
+  color: #fff;
+  border: none;
+  transition: ease-out 0.2s;
+}
+
+/* cart icon */
+.cart{
+  background-image: url('../svg/cart.svg');
+  background-repeat: no-repeat;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  z-index: 4;
+  top: 7px;
+}
+
+/* circle behind the item counter */
+.cart .cartcounter{
+  width: 30px;
+  height: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+  background-color: #fbb44e;
+  border-radius: 30px;
+  margin: 0 0 0 65px;
+}
+
+/* the item counter itself */
+.cart .cartcounter a{
+  color: #36333e;
+  position: relative;
+  justify-content: center;
+  left: 8px;
+  bottom: 1px;
+}
+
+.shop_item .selectsize_header {
+  background-color: #fbb44e;
+  color: #36333e;
+  font-size: 20px;
+  padding: 16px 32px;
+  margin-bottom: -20px;
+}
+
+.shop_item .selectsize_menu {
+  background-color: none;
+  width: 100%;
+  color: white;
+  padding: 16px 32px;
+  margin: 10px 10px 0 -32px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+/* The container */
+.selectsize_menu .container {
+  background-color: #fbb44e;
+  color: #36333e;
+  display: block;
+  position: relative;
+  margin-bottom: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: normal;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-radius: 15px
+}
+
+.selectsize_menu .container:hover{
+  background-color: #ee7642;
+  color: #fff;
+  transition: ease-out 0.2s;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 4px;
+  left: 6px;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ee7642;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #fff;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
 /* Off Canvas Navigation */
 
 .hamburger{
@@ -504,23 +695,28 @@ nav.index_nav ul li a:hover {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #EE7642;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+
 }
 
 .sidenav a {
-  padding: 8px 8px 8px 32px;
+  padding: 20px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #ffffff;
+  line-height: 50px;
   display: block;
-  transition: 0.3s;
+  transition: 0.2s;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: #36333e;
+  background-color: #fbb44e;
 }
 
 .sidenav .closebtn {
@@ -544,13 +740,14 @@ nav.index_nav ul li a:hover {
 
   .home_hero h1, .child_hero h1 {
     font-weight: normal;
-    font-size: 138px;
-    line-height: 145px;
-    margin: 0px;
+    font-size: 130px;
+    line-height: 140px;
+    margin: -110px 0 0 20px;
 }
 
 .home_hero p, .child_hero p {
   margin: 0 auto;
+  padding: 10px 60px 0 50px ;
 }
 nav{
   position: absolute;
@@ -564,8 +761,34 @@ nav ul {
   right: 15px;
 }
 
+nav ul li a{
+  font-size: 15px;
+}
+
 #aboutpagehideme{
   display: none;
+}
+
+.diamonds {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin: 0px;
+  position: absolute;
+  bottom: -680px;
+  left: 27.5%;
+}
+
+.child_hero .diamonds {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin: 0px;
+  position: absolute;
+  bottom: -545px;
+  left: 27.5%;
 }
 
 .aboutpage{
@@ -573,15 +796,18 @@ nav ul {
 }
 
 .about_hero{
-  height: 495px;
+  height: 356px;
 }
 
 .aboutpage h4{
-  right: 30%;
+  right: 27%;
 }
 
 .aboutpage p{
-  width: 700px;
+  width: 625px;
+  margin-top: 20px;
+  font-size: 25px;
+  line-height: 32px;
 }
 
 .content{
@@ -596,26 +822,96 @@ nav ul {
   display: none;
 }
 
+.tourpage{
+  height: auto;
+  padding: none;
+}
+
 .tour_hero h3 {
-  font-size: 114px;
+  font-size: 100px;
+  padding: 40px 0 40px 0;
+  margin-top: -25px;
 }
 
-.tourdate_location {
-  width: 400px;
-  font-size: 62px;
+.tourdate_location{
+  width: 447px;
+  height: 112px;
+  background-color: #36333e;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 7px 20px 25px 20px;
+  font-family: 'osgardregular';
+  font-size: 40px;
+  color: #fbb44e;
+  text-align: center;
 }
 
-.tourdate_box {
-  width: 203px;
-  height: 268px;
-  font-size: 52px;
+.tourdate_box{
+  width: 120px;
+  height: 120px;
+  border: 12px solid #36333e;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 50px 0;
+  font-family: 'eccentricregular';
+  font-size: 30px;
+  color: #36333e;
+  text-align: center;
+}
+
+.tourdate_box span{
+  font-size: 100px;
+  line-height: 86px;
 }
 
 .tourdate_location span {
   font-family: 'eccentricregular';
-  font-size: 60px;
-  line-height: 40px;
+  font-size: 72px;
+  line-height: 80px;
 }
+
+.tourdate_location span#OCT13{
+  letter-spacing: -0.02em
+}
+
+.tourdate#laststop{
+  padding: 0 0 100px 0;
+}
+
+.shoppage{
+  height: auto;
+  padding-bottom: 150px
+}
+
+/* cart icon */
+.cart{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  z-index: 4;
+  top: 14px;
+}
+
+/* circle behind the item counter */
+.cart .cartcounter{
+  width: 15px;
+  height: 15px;
+  font-size: 12px;
+  background-color: #fbb44e;
+  border-radius: 15px;
+  margin: 0 0 0 32px;
+}
+
+/* the item counter itself */
+.cart .cartcounter a{
+  color: #36333e;
+  position: relative;
+  justify-content: center;
+  left: 4px;
+  bottom: 4px;
+}
+
 
 
 }
@@ -626,7 +922,7 @@ nav ul {
 @media screen and (max-width: 320px){
 
   .hamburger{
-    font-size:30px;
+    font-size: 30px;
     cursor:pointer;
     color: #fff;
     position: relative;
@@ -642,9 +938,13 @@ nav ul {
     display: inline;
   }
 
-  br {
+  .home_hero br {
     display: none;
-}
+  }
+
+  .about_hero br {
+    display: none;
+  }
 
 nav{
   height: 60px;
@@ -661,33 +961,32 @@ nav{
   left: -5px;
 }
 
+.home_hero{
+  height: 568px;
+}
+
   .home_hero h1, .child_hero h1 {
     font-weight: normal;
-    font-size: 55px;
-    line-height: 80px;
-    margin: 8px;
+    font-size: 54px;
+    line-height: 60px;
+    margin: -55px 8px 8px 8px;
 }
 
 .home_hero p, .child_hero p {
   font-family: 'Courier Prime', monospace;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 35px;
+  font-size: 13px;
+  line-height: 20px;
   color: #ffffff;
   margin-left: 10px;
-  margin-top: 15px;
+  margin-top: 35px;
   margin-right: 8px;
+  padding: 0 5px 0 5px;
 }
 
 .diamonds {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  margin: 0px;
-  position: relative;
-  top: 10%;
-  left: -30px;
+  bottom: -75%;
+  left: -18px;
 }
 
 #navbar ul{
@@ -710,6 +1009,10 @@ nav{
   height: auto;
 }
 
+.aboutpage{
+  height: 568px;
+}
+
 .aboutpage h4 {
   right: 22%;
 }
@@ -719,61 +1022,241 @@ nav{
 }
 
 .aboutpage p {
-  font-size: 15px;
+  font-size: 13px;
   line-height: 22px;
-  width: 298px;
+  width: 264px;
 }
 
 .tourpage {
   background-color: #FBB44E;
   width: 100vw;
-  height: 2800px;
+  height: auto;
   padding: 0;
 }
 
 .tour_hero h3 {
-  font-size: 44px;
-  padding: 59px 0px 5px 0px;
+  font-size: 45px;
+  padding: 40px 0 0px 0;
+  margin: -10px 0 -25px 0;
 }
 
 .tourdate_box {
-  width: 70px;
-  height: 106px;
-  border: 6px solid #36333e;
+  width: 69px;
+  height: 69px;
+  border: 4px solid #36333e;
   justify-content: center;
   align-items: center;
-  margin: 0 0 71px 0;
+  margin: 0 0 19px 0;
   font-family: 'eccentricregular';
-  font-size: 22px;
+  font-size: 18px;
   color: #36333e;
   text-align: center;
-  padding: 6px;
 }
 
 .tourdate_location {
-  width: 160px;
-  height: 80px;
+  width: 183px;
+  height: 57px;
   background-color: #36333e;
   justify-content: center;
   align-items: center;
   margin: 0;
-  padding: 25px 30px 25px 30px;
+  padding: 10px 2px 10px 2px;
   font-family: 'osgardregular';
-  font-size: 24px;
+  font-size: 16px;
 }
 
 .tourdate_box span {
   font-family: 'osgardregular';
-  font-size: 70px;
-  line-height: 65px;
+  font-size: 64px;
+  line-height: 50px;
 }
 
 .tourdate_location span {
   font-family: 'eccentricregular';
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 30px;
+  line-height: 35px;
 }
 
+.tourdate_location span#OCT13{
+  letter-spacing: -0.03em
+}
+
+.tourdate#laststop{
+  padding: 0 0 50px 0;
+}
+
+
+.shoppage{
+  background-color: #ee7642;
+  width: 100vw;
+  height: auto;
+  margin-top: 60px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.shop_item{
+  margin: 25px;
+  background-color: #ffffff;
+  width: 200px;
+  height: 200px;
+}
+
+.shop_item .itemname{
+  position: relative;
+  background-color: none;
+  color: #36333e;
+  font-size: 13px;
+  width: 140px;
+  right: 0;
+  margin-bottom: 5px;
+}
+
+.shop_item .container {
+  position: relative;
+  width: 100%;
+  background-color: #FBB44E;
+}
+
+.shop_item .image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .2s ease;
+  backface-visibility: hidden;
+}
+
+.shop_item .middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  width: 70%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+}
+
+.shop_item .container:hover .image {
+  opacity: 0.1;
+}
+
+.shop_item .container:hover .middle {
+  opacity: 1;
+}
+
+.shop_item .addtocart_button button{
+  background-color: #fbb44e;
+  color: #36333e;
+  font-size: 15px;
+  padding: 4px 4px;
+  margin: 0;
+  border: none;
+  border-radius: 10px;
+  width: 140px;
+}
+
+.shop_item .selectsize_header {
+  background-color: #fbb44e;
+  color: #36333e;
+  font-size: 13px;
+  padding: 2px 16px;
+  margin-bottom: 5px;
+}
+
+.shop_item .selectsize_menu {
+  background-color: none;
+  width: 100%;
+  color: white;
+  padding: 8px 16px;
+  margin: -10px 5px -10px -16px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+/* The container */
+.selectsize_menu .container {
+  background-color: #fbb44e;
+  color: #36333e;
+  display: block;
+  position: relative;
+  margin-bottom: 5px;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: normal;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-radius: 13px
+}
+
+.selectsize_menu .container:hover{
+  background-color: #ee7642;
+  color: #fff;
+  transition: ease-out 0.2s;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 2px;
+  left: 3px;
+  height: 13px;
+  width: 13px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ee7642;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #fff;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+ 	top: 0;
+	left: 0;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	background: white;
+}
 
 
 
